--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "chance": "^1.1.13",
+    "pumpify": "^2.0.1",
+    "split": "^1.0.1",
+    "superagent": "^10.2.2"
+  }
 }
