--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "chance": "^1.1.13",
+    "csv-parse": "^6.0.0",
     "pumpify": "^2.0.1",
     "split": "^1.0.1",
     "superagent": "^10.2.2"
